HM-26 Product controller 수정 - 메서드 수정